fixed fonts and alignment, added graphics

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,4 @@
-.get-started {
+.hero1 {
     height: 100vh;
     padding-bottom: var(--footer-height);
     padding-top: var(--header-height);
@@ -12,28 +12,29 @@
     color: white;
 }
 
-.page2 {
-    height: 100vh;
-    width: auto;
-    padding-bottom: var(--footer-height);
-    padding-top: var(--header-height);
-    box-sizing: border-box;
+.hero2 {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: bottom;
     text-align: left;
+    background-color: #F9F9F9;
+    padding: 100px 0;
 }
 
-.page2 .content-wrapper {
+.hero2 .content-wrapper {
     text-align: left;
     display: block;
+    width: 50vw;
+    
 }
 
 .our-partners {
     width: 100%;
     min-height: 150px;
-    background-color: rgb(236, 236, 236);
+    background-color: white;
+    padding: 10px 0;
 }
 
 .services {
@@ -50,15 +51,34 @@
     text-align: center;
 }
 
+.services-container {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    margin: 40px 0;
+}
+
+.services-image {
+    width: 35vw;
+    height: auto;
+}
+
 .service-types-wrapper {
     padding-top: 50px;
     font-size: 20px;
     text-align: left;
     display: block;
+    float: right;
+    margin-right: 80px;
 }
 
 .approach {
     height: 100vh;
+}
+
+.approach-head {
+    width: 800px;
+    margin-bottom: 50px;
 }
 
 .approach .stages {
@@ -70,8 +90,7 @@
     width: 550px;
     height: auto;
     text-align: center;
-    border: 2px solid grey;
-    margin-right: 50px;
+    margin-right: 100px;
 }
 
 .approach .stage-description {
@@ -98,7 +117,7 @@
 
 .insights-intelligence .blogs-showcase {
     text-align: center;
-    margin-bottom: 30px;
+    margin: 30px 0;
 }
 
 .insights-intelligence .blog1 {
@@ -127,20 +146,21 @@
 }
 
 .partnerships-tech-stack {
-    background-image: var(--grad2);
+    background-image: var(--grad3);
 }
 
 .partnerships-tech-stack .our-partners {
     background-color: #D2C7FB;
 }
 
-.start-project {
-    display: block;
+.start-project .content-wrapper {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
     min-width: 700px;
-    max-width: auto;
+    max-width: 700px;
     margin: 0 auto;
     padding-bottom: 50px;
 }
@@ -162,7 +182,7 @@
     width: 500px;
     min-height: auto;
     padding: 10px;
-    margin-right: 10px;
+    margin-right: 50px;
     vertical-align: middle;
 }
 
@@ -172,19 +192,21 @@
     min-height: auto;
     border: 2px solid grey;
     padding: 10px;
-    margin-left: 10px;
+    margin-left: 50px;
     vertical-align: middle;
 }
 
 .faq .faq-form .info-box {
     border: 2px solid lightgrey;
     color: grey;
+    cursor: text;
 }
 
 .faq .faq-form .message-box {
     border: 2px solid lightgrey;
     color: grey;
     margin-bottom: 10px;
+    cursor: text;
 }
 
 .faq .faq-form button {
