--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,19 +10,32 @@
     max-width: 100vw;
     padding-bottom: var(--footer-height);
     padding-top: var(--header-height);
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-left: 100px;
+    margin-right: 100px;
     overflow: auto;
 }
 
 button {
-    background-color: rgb(255, 255, 255);
-    border-radius: 5px;
-    margin-right: 40px;
-    font-size: 15px;    
+    border: 2px solid grey;
+    min-width: 210px;
+    border-radius: 8px;
+    font-size: 15px;
+    padding: 20px;
+    margin: 15px;
 }
 
 button:hover {
-    background-color: grey;
+    background-image: var(--grad2);
     cursor: pointer;
+}
+
+.button1 {
+    background-image: var(--grad1);
+    color: white;
+    
+}
+
+.button2 {
+    background: white;
+    color: var(--grad1);
 }
